--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,6 +1,6 @@
 .input{
     display: flex;
-    width: 90%;
+    width: 95%;
     position: relative;
     align-items: center;
 }
@@ -43,21 +43,41 @@
     transform: scale(0.8);
     box-shadow: 0 0 5px black;
 }
+.container{
+    display: flex;
+    width: 95%;
+    margin-top: 10px;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.todos__heading{
+    font-size: 30px;
+    color: white;
+}
 
 .todos {
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
-    width: 90%;
-    flex-wrap: wrap;
+    width: 47.5%;
+    padding: 15px;
+    background-color: rgb(20, 2, 30);
+    border-radius: 15px;
 }
 
 .todos__single{
     display: flex;
-    width: 30%;
     border-radius: 5px;
-    padding: 20px;
+    padding: 10px;
     margin-top: 15px;
     background-color: blanchedalmond;
+    transition: 0.2s;
+}
+
+.todos__single:hover{
+    box-shadow: 0 0 5px black;
+    transform: scale(1.03);
 }
 
 .todos__single--text{
@@ -80,14 +100,36 @@
     cursor: pointer;
 }
 
+.completed{
+    background-color: rgb(4, 37, 2);
+}
+
+.drag__active{
+    background-color:rgb(100, 66, 186);
+}
+.drag__complete{
+    background-color: rgb(8, 135, 8);
+}
+
+.drag{
+    box-shadow: 0 0 20px black;
+}
+@media (max-width: 1100px){
+    .todos{
+        width: 45%;
+    }
+}
+
 @media (max-width:700px){
     .input{
         width: 95%;
     }
     .todos{
         width: 95%;
+        margin-bottom: 10px;
     }
-    .todos__single{
-        width: 100%;
+    .container{
+        width: 95%;
+        flex-direction: column;
     }
 }
